onlinequiz.html content done

--- a/comp1950/html/onlinequiz.html
+++ b/comp1950/html/onlinequiz.html
@@ -30,6 +30,67 @@
         </nav>
 
        <main>
+           <h2>Class 2 Quiz</h2>
+           <form action="" method="">
+                <fieldset>
+                    <legend>Q1: Briefly describe the purpose of a CSS reset (2 marks): </legend>
+                    <textarea 	name="q1" 
+				                placeholder="Type your answer in here"
+				                id="q1"></textarea>
+                </fieldset>
+
+                <fieldset>
+                    <legend>Q2: Describe one advantage of using sprites (2 marks): </legend>
+                    <textarea 	name="q2" 
+                                placeholder="Type your answer in here"
+                                id="q2"></textarea>
+                </fieldset>
+
+                <fieldset>
+                    <legend>Q3: Search engines and screen readers ignore background images (1 mark): </legend>
+                    <input 	type="radio" 
+                            id="q3_true" 
+                            name="q3" />	
+                    <label 	for="q3_true">True</label>	
+                    <br />		
+                    <input 	type="radio" 
+                            id="q3_false" 
+                            name="q3" />	
+                    <label 	for="q3_false">False</label>	
+                    <br />	
+                </fieldset>
+
+                <fieldset>
+                    <legend>Q4: The CSS property overflow stops non-floated content from positioning beside a float (1 mark): </legend>
+                    <input 	type="radio" 
+                            id="q4_true" 
+                            name="q4" />	
+                    <label 	for="q4_true">True</label>	
+                    <br />		
+                    <input 	type="radio" 
+                            id="q4_false" 
+                            name="q4" />	
+                    <label 	for="q4_false">False</label>	
+                    <br />	
+                </fieldset>
+
+                <fieldset>
+                    <legend>Q4: The CSS property overflow stops non-floated content from positioning beside a float (1 mark): </legend>
+                    <input 	type="radio" 
+                            id="flexbox" 
+                            name="q5" />	
+                    <label 	for="flexbox">Flexbox</label>	
+                    <br />		
+                    <input 	type="radio" 
+                            id="gridbox" 
+                            name="q5" />	
+                    <label 	for="gridbox">Grid Layout</label>	
+                    <br />	
+                </fieldset>
+
+                <input type="submit" class="button" value="Submit" />
+           </form>
+           
           
        </main>
 
