--- a/comp1950_2/html/onlinequiz.html
+++ b/comp1950_2/html/onlinequiz.html
@@ -55,7 +55,7 @@
             <img src="../img/bcit_logo.jpg" alt="BCIT logo" class="bcit_logo" />
           </a>
           <p>COMP1950</p>
-          <p>Web Development And Design 2</p>
+          <p id="dev">Web Development And Design 2</p>
         <ul class="nav navbar-nav navbar-right">
           <li>
             <a href="https://www.bcit.ca/">BCIT</a>
@@ -110,7 +110,7 @@
         </ul>
       </div>
       <div id="content" class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-        <h1>Web Development and Design 2</h1>
+        <h1>Online Quiz</h1>
         <h2>Class 2 Quiz</h2>
         <form action="" method="">
              <fieldset>
