--- a/comp1950_2/html/lectures.html
+++ b/comp1950_2/html/lectures.html
@@ -30,10 +30,10 @@
         <li ><a href="homepage.html">Home</a></li>
 
         <li >
-          <a href="lectures.html">Lectures</a>
+          <a id="current_page" href="lectures.html">Lectures</a>
         </li>
         <li>
-          <a id="current_page" href="onlinequiz.html">Online Quiz</a>
+          <a  href="onlinequiz.html">Online Quiz</a>
         </li>
       </ul>
     </header>
@@ -83,19 +83,19 @@
             <a href="#">01:Tools and Standards</a>
           </li>
           <ul>
-            <li class="sub">
+            <li >
               <a href="#introductions"> Introductions</a>
             </li>
-            <li class="sub">
+            <li >
               <a href="#example1"> Orientation</a>
             </li>
-            <li class="sub">
+            <li >
               <a href="#"> Web development tools</a>
             </li>
-            <li class="sub">
+            <li >
               <a href="#"> Standards based development</a>
             </li>
-            <li class="sub">
+            <li >
               <a href="#"> To Do</a>
             </li>
           </ul>
